--- a/src/loadify/View/SettingsView.xaml
+++ b/src/loadify/View/SettingsView.xaml
@@ -41,6 +41,8 @@
                         <RowDefinition Height="Auto"/>
                         <RowDefinition Height="Auto"/>
                         <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
                         <RowDefinition Height="65*"/>
                     </Grid.RowDefinitions>
                     <Label Content="{Resx LocalTrackDetection}" FontSize="16" Foreground="{StaticResource AccentColorBrush}" Grid.ColumnSpan="2" />
@@ -59,6 +61,12 @@
                     <CheckBox x:Name="SkipOnDownloadFailures" Grid.Row="5" Margin="7 5">
                         <CheckBox.Content>
                             <TextBlock TextWrapping="Wrap" Text="{Resx SkipOnDownloadFailures}"/>
+                        </CheckBox.Content>
+                    </CheckBox>
+                    <Label Grid.Row="6" Content="{Resx Other}" FontSize="16" Foreground="{StaticResource AccentColorBrush}" Grid.ColumnSpan="2" />
+                    <CheckBox x:Name="FetchPlaylistsOnStartup" Grid.Row="7" Margin="7 5">
+                        <CheckBox.Content>
+                            <TextBlock TextWrapping="Wrap" Text="{Resx FetchPlaylistsOnStartup}"/>
                         </CheckBox.Content>
                     </CheckBox>
                 </Grid>
